# verkada-pass-experiment

./: .gitignore  README.md  verkada-external-references.md  verkada-pass-auth-and-login.md  verkada-pass-ble-flow-diagram.md  verkada-pass-ble-protocol-deep-dive.md  verkada-pass-bluetooth.md  verkada-pass-door-access-api.md  verkada-pass-findings-index.md
bt-capture/: .gitignore  README.md  analyze_verkada_ble.py  (+5 more)
verkada-pass-test-client/: .gitignore  README.md  config.example.toml  pyproject.toml
verkada-pass-test-client/android-app/: .gitignore  gradle.properties  settings.gradle.kts
verkada-pass-test-client/android-app/app/: build.gradle.kts
verkada-pass-test-client/android-app/app/src/main/: AndroidManifest.xml
verkada-pass-test-client/android-app/app/src/main/java/com/woyken/verkadapasstestapp/: MainActivity.kt  MainScreen.kt  MainViewModel.kt
verkada-pass-test-client/android-app/app/src/main/java/com/woyken/verkadapasstestapp/ble/: BleCentralManager.kt  BlePeripheralManager.kt
verkada-pass-test-client/android-app/app/src/main/java/com/woyken/verkadapasstestapp/data/: AppLogger.kt  AppStorage.kt  Models.kt  ProtocolCrypto.kt  Redaction.kt  VerkadaApi.kt
verkada-pass-test-client/android-app/app/src/main/res/values/: strings.xml  themes.xml
verkada-pass-test-client/android-app/app/src/test/java/com/woyken/verkadapasstestapp/: ProtocolCryptoTest.kt
verkada-pass-test-client/src/verkada_pass_test_client/: bluetooth.py  cli.py  client.py  config.py  models.py
verkada-pass-test-client/tests/: test_bluetooth.py  test_client.py  test_models.py
(+32 files in other folders)
